--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Universo Cinematografico de Marvel - Rootentomatoes.com </title>
+    <title> Universo Cinematografico de Marvel </title>
     <meta name="viewpoint" content="width=device-width, initial-scale=1 maximum-scale=1">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -15,8 +15,8 @@
 
         <!-- Nav -->
 
-        <nav class="barra-nav">
-            <ul class="list-nav">
+        <nav >
+            <ul class="list-nav" >
                 <li>Fase 1</li>
                 <li>Fase 2</li>
                 <li>Fase 3</li>
@@ -30,8 +30,8 @@
 
     <main>
         <!-- Sección 1 -->
-<h1 class="titulo"> Fase 1</h1>
-<p class="intro"> En esta fase se presenta el universo en el que suceden las películas, introduciendo a los personajes centrales: <b> Anthony Stark, Steven Rogers, Thor, Bruce Banner, Natalia Romanoff, Clinton Barton y Nicholas Fury</b>, además de las organizaciones como <b> S.H.I.E.L.D. y HYDRA</b>. Muchas de las películas de la Fase Uno se centran en el Teseracto, un artefacto alienígena que más tarde se estableció como uno de las seis Gemas del Infinito. La última película, The Avengers, consiste en la alianza de los villanos Loki y Thanos para robar el Teseracto y conquistar la Tierra, lo que lleva a la formación de los Vengadores.</p>
+<h1 class="titulo1"> Fase 1</h1>
+<p class="intro1"> En esta fase se presenta el universo en el que suceden las películas, introduciendo a los personajes centrales: <b> Anthony Stark, Steven Rogers, Thor, Bruce Banner, Natalia Romanoff, Clinton Barton y Nicholas Fury</b>, además de las organizaciones como <b> S.H.I.E.L.D. y HYDRA</b>. Muchas de las películas de la Fase Uno se centran en el Teseracto, un artefacto alienígena que más tarde se estableció como uno de las seis Gemas del Infinito. La última película, The Avengers, consiste en la alianza de los villanos Loki y Thanos para robar el Teseracto y conquistar la Tierra, lo que lleva a la formación de los Vengadores.</p>
 
 <!-- Sección 2 -->
 </main>
