--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
         <!-- Nav -->
 
-        <nav class="barra-nav">
+        <nav>
             <ul class="list-nav">
-                <li> <a href="/index2.html"> Fase 1</a> </li> 
+                <li> <a class="item-nav" href="/index2.html"> Fase 1</a> </li> 
                 <li>Fase 2</li>
                 <li>Fase 3</li>
                 <li>Fase 4</li>
@@ -32,25 +32,26 @@
     </header>
 <!-- Main - Principal -->
     <main>
-<h1> Universo cinematografico de Marvel </h1>
-<p> El Universo cinematografico de Marvel o U.C.M, se separa en:</p>
+<h1 class="title"> Universo cinematografico de Marvel </h1>
+<p>El Universo Cinematográfico de Marvel (en inglés, Marvel Cinematic Universe) es una franquicia creada por Marvel Studios, designada como la Tierra-199999 dentro del multiverso de Marvel, con algunas entregas también ubicadas en realidades adyacentes o ramificadas.</p>
+<p> Este se separa en:</p>
 <h3> Saga del infinito:</h3>
-<ul>
-    <li> Fase 1</li> 
-    <li> Fase 2</li>
-    <li> Fase 3 </li>
-</ul>
+
+<a  href="index2.html"> <img class="fase1-i" src="/Imagenes/fase-1.jpeg" alt="fase-1"></a> 
+<a href=""> <img class="fase2-i" src="/Imagenes/fase-2.jpeg" alt="fase-2"></a>
+<a href=""> <img class="fase3-i" src="/Imagenes/fase-3.jpeg" alt="fase-3"></a>
+
 <h3> Para posteriormente comenzar la Post-Saga del infinito</h3>
 <ul>
     <li> Fase 4 </li>
 </ul>
 <h3> Todas estas tiene un orden cronologico: </h3>
 <small>(El cual no esta necesariamente vinculado con el año en el que salio la pelicula)</small>
-<a href="" target="_blank"> </a>
+<a href="" target="_blank"> <img src="" alt=""> </a>
 <h3>Aquí se pueden encontrar los próximos estrenos: </h3>
-<a href="" target="_blank"></a>
-<h3>También hay series que no pertenecen aún al U.C.M. pero se creen que formaran parte a futuro: </h3>
-<a href="" target="_blank"></a>
+<a href="" target="_blank"> <img class="estenos-i" src="/Imagenes/próximos-estrenos.jpeg" alt="próximos-estrenos"> </a>
+<h3>También hay series, algunas forman parte del U.C.M. otras se esperan que formen a futuro:</h3>
+<a href="" target="_blank"> <img class="series-i" src="/Imagenes/series.jpeg" alt="Series"></a>
     </main>
 
     <!-- Pie de pagina -->
