--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Cabecera -->
     <header class="encabezado">
-        <a  href="/index.html"> <img class="logo" src="/imagenes/Logo.jpeg" alt="Marvel logo"></a>
+        <a  href="/index.html"> <img class="logo" src="Logo.jpeg" alt="Marvel logo"></a>
 
         <!-- Nav -->
 
@@ -37,9 +37,9 @@
 <p> Este se separa en:</p>
 <h3> Saga del infinito:</h3>
 
-<a  href="index2.html"> <img class="fase1-i" src="/Imagenes/fase-1.jpeg" alt="fase-1"></a> 
-<a href=""> <img class="fase2-i" src="/Imagenes/fase-2.jpeg" alt="fase-2"></a>
-<a href=""> <img class="fase3-i" src="/Imagenes/fase-3.jpeg" alt="fase-3"></a>
+<a  href="index2.html"> <img class="fase1-i" src="fase-1.jpeg" alt="fase-1"></a> 
+<a href=""> <img class="fase2-i" src="fase-2.jpeg" alt="fase-2"></a>
+<a href=""> <img class="fase3-i" src="fase-3.jpeg" alt="fase-3"></a>
 
 <h3> Para posteriormente comenzar la Post-Saga del infinito</h3>
 <ul>
@@ -49,9 +49,9 @@
 <small>(El cual no esta necesariamente vinculado con el año en el que salio la pelicula)</small>
 <a href="" target="_blank"> <img src="" alt=""> </a>
 <h3>Aquí se pueden encontrar los próximos estrenos: </h3>
-<a href="" target="_blank"> <img class="estenos-i" src="/Imagenes/próximos-estrenos.jpeg" alt="próximos-estrenos"> </a>
+<a href="" target="_blank"> <img class="estenos-i" src="próximos-estrenos.jpeg" alt="próximos-estrenos"> </a>
 <h3>También hay series, algunas forman parte del U.C.M. otras se esperan que formen a futuro:</h3>
-<a href="" target="_blank"> <img class="series-i" src="/Imagenes/series.jpeg" alt="Series"></a>
+<a href="" target="_blank"> <img class="series-i" src="series.jpeg" alt="Series"></a>
     </main>
 
     <!-- Pie de pagina -->
