--- a/index1.html
+++ b/index1.html
@@ -1,34 +1,40 @@
-<!DOCTYPE html>
+<index.html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fase 2</title>
+    <title> Universo Cinematografico de Marvel </title>
+    <meta name="viewpoint" content="width=device-width, initial-scale=1 maximum-scale=1">
     <link rel="stylesheet" href="style.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,500&family=Poppins:ital,wght@0,100;1,200;1,300&display=swap" rel="stylesheet">
-
 </head>
 <body>
-        <!-- Cabecera -->
-<header class="encabezado">
-    <a  href="/index.html"> <img class="logo" src="/imagenes/Logo.jpeg" alt="Marvel logo"></a>
-    
-            <!-- Nav -->
-    <nav>
-        <ul class="list-nav">
-            <li> <a class="item-nav" href="/index1.html"> Fase 1</a> </li> 
-            <li> <a class="item-nav" href="/index2.html"> Fase 2</a> </li>
-            <li> <a class="item-nav" href=""> Fase 3</a> </li>
-            <li> <a class="item-nav" href="">Fase 4</a> </li>
-            <li> <a class="item-nav" href="">Series</a> </li>
-            <li> <a class="item-nav" href="">Próximos estrenos</a> </li>
-            <li> <a class="item-nav" href="">Orden cronologico</a> </li>
-        </ul>
-    </nav>
-</header>
+     <!-- Cabecera -->
+    <header class="encabezado">
+        <a  href="/index.html"> <img class="logo" src="/imagenes/Logo.jpeg" alt="Marvel logo"></a>
+
+                <!-- Nav -->
+
+        <nav>
+            <ul class="list-nav">
+                <li> <a class="item-nav" href="/index1.html"> Fase 1</a> </li> 
+                <li> <a class="item-nav" href="/index2.html"> Fase 2</a> </li>
+                <li> <a class="item-nav" href=""> Fase 3</a> </li>
+                <li> <a class="item-nav" href="">Fase 4</a> </li>
+                <li> <a class="item-nav" href="">Series</a> </li>
+                <li> <a class="item-nav" href="">Próximos estrenos</a> </li>
+                <li> <a class="item-nav" href="">Orden cronologico</a> </li>
+            </ul>
+        </nav>
+    </header>
+
+<main>
+        <!-- Sección 1 -->
+<h1 class="titulo1"> Fase 1</h1>
+<p class="intro1"> En esta fase se presenta el universo en el que suceden las películas, introduciendo a los personajes centrales: <b> Anthony Stark, Steven Rogers, Thor, Bruce Banner, Natalia Romanoff, Clinton Barton y Nicholas Fury</b>, además de las organizaciones como <b> S.H.I.E.L.D. y HYDRA</b>. Muchas de las películas de la Fase Uno se centran en el Teseracto, un artefacto alienígena que más tarde se estableció como uno de las seis Gemas del Infinito. La última película, The Avengers, consiste en la alianza de los villanos Loki y Thanos para robar el Teseracto y conquistar la Tierra, lo que lleva a la formación de los Vengadores.</p>
+
+<!-- Sección 2 -->
+</main>
 
             <!-- Pie de pagina -->
 <footer>  
@@ -45,5 +51,4 @@
         </ul>
 </footer>
 
-</body>
 </html>
