--- a/index.html
+++ b/index.html
@@ -11,55 +11,64 @@
 <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,500&family=Poppins:ital,wght@0,100;1,200;1,300&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="general">
     <!-- Cabecera -->
     <header class="encabezado">
-        <a  href="index.html"> <img class="logo" src="Logo.jpeg" alt="Marvel logo"></a>
+        <a  href="/index.html"> <img class="logo" src="/imagenes/Logo.jpeg" alt="Marvel logo"></a>
 
         <!-- Nav -->
 
         <nav>
             <ul class="list-nav">
-                <li> <a class="item-nav" href="/index2.html"> Fase 1</a> </li> 
-                <li>Fase 2</li>
-                <li>Fase 3</li>
-                <li>Fase 4</li>
-                <li>Series</li>
-                <li>Próximos estrenos</li>
-                <li>Orden cronologico</li>
+                <li> <a class="item-nav" href="/index1.html"> Fase 1</a> </li> 
+                <li> <a class="item-nav" href="index2.html"> Fase 2</a> </li>
+                <li> <a class="item-nav" href=""> Fase 3</a> </li>
+                <li> <a class="item-nav" href="">Fase 4</a> </li>
+                <li> <a class="item-nav" href="">Series</a> </li>
+                <li> <a class="item-nav" href="">Próximos estrenos</a> </li>
+                <li> <a class="item-nav" href="">Orden cronologico</a> </li>
             </ul>
         </nav>
     </header>
 <!-- Main - Principal -->
     <main>
-<h1 class="title"> Universo cinematografico de Marvel </h1>
-<p>El Universo Cinematográfico de Marvel (en inglés, Marvel Cinematic Universe) es una franquicia creada por Marvel Studios, designada como la Tierra-199999 dentro del multiverso de Marvel, con algunas entregas también ubicadas en realidades adyacentes o ramificadas.</p>
-<p> Este se separa en:</p>
-<h3> Saga del infinito:</h3>
-
-<a  href="index2.html"> <img class="fase1-i" src="fase-1.jpeg" alt="fase-1"></a> 
-<a href=""> <img class="fase2-i" src="fase-2.jpeg" alt="fase-2"></a>
-<a href=""> <img class="fase3-i" src="fase-3.jpeg" alt="fase-3"></a>
-
-<h3> Para posteriormente comenzar la Post-Saga del infinito</h3>
-<ul>
-    <li> Fase 4 </li>
-</ul>
-<h3> Todas estas tiene un orden cronologico: </h3>
+        <h1 class="title"> Universo cinematografico de Marvel </h1>
+<div class="background">
+    <p>El <b>Universo Cinematográfico de Marvel</b> (en inglés, <b>Marvel Cinematic Universe</b>) es una franquicia creada por Marvel Studios, designada como la  <b>Tierra-199999</b> dentro del multiverso de Marvel, con algunas entregas también ubicadas en realidades adyacentes o ramificadas.</p>
+    <p>Este se separa en:</p>
+    <h2 class="subtitle"> Saga del infinito:</h2>
+<div class="image-general">
+    <a href="index1.html"> <img class="fase1-i" src="/Imagenes/fase-1.jpeg" alt="fase-1"></a> 
+    <a href="index2.html"> <img class="fase2-i" src="/Imagenes/fase-2.jpeg" alt="fase-2"></a>
+    <a href=""> <img class="fase3-i" src="/Imagenes/fase-3.jpeg" alt="fase-3"></a>
+</div>
+<h2 class="subtitle"> Para posteriormente comenzar la Post-Saga del infinito:</h2>
+<a href=""> <img class="fase4-i" src="/Imagenes/fase-4.jpeg" alt="fase4"></a>
+<h3 class="subtitle"> Todas estas tiene un orden cronologico: </h3>
 <small>(El cual no esta necesariamente vinculado con el año en el que salio la pelicula)</small>
-<a href="" target="_blank"> <img src="" alt=""> </a>
-<h3>Aquí se pueden encontrar los próximos estrenos: </h3>
-<a href="" target="_blank"> <img class="estenos-i" src="próximos-estrenos.jpeg" alt="próximos-estrenos"> </a>
-<h3>También hay series, algunas forman parte del U.C.M. otras se esperan que formen a futuro:</h3>
-<a href="" target="_blank"> <img class="series-i" src="series.jpeg" alt="Series"></a>
-    </main>
+<a href="" target="_blank"> <img class="orden-cronologico" src="/Imagenes/ORDEN-CRONOLOGICO.png" alt="Orden-cronologico"> </a>
+<h3 class="subtitle">Aquí se pueden encontrar los próximos estrenos: </h3>
+<a href="" target="_blank"> <img class="estenos-i" src="/Imagenes/próximos-estrenos.jpeg" alt="próximos-estrenos"> </a>
+<h3 class="subtitle">También hay series, algunas forman parte del U.C.M. otras se esperan que formen a futuro:</h3>
+<a href="" target="_blank"> <img class="series-i" src="/Imagenes/series.jpeg" alt="Series"></a>
+</div>
+</main>
 
     <!-- Pie de pagina -->
-    <footer>  <small>
-<span> María Busto - Todos los derechos reservados 2021 - Información basada en </span> 
-    <a class="tirando-tomates" href="https://www.rottentomatoes.com/" target="_blank"> Rootentomatoes.com </a> 
-</small>
-</footer>
+<footer>
+    <small>
+        <span> María Busto - Todos los derechos reservados 2021 - Información basada en </span> 
+        <a class="tirando-tomates" href="https://www.rottentomatoes.com/" target="_blank"> Rootentomatoes.com </a>
+    </small>
+    <ul class="footerlist">
+        <li>
+            <a href="https://www.instagram.com/marvellatam/" target="_blank" title="Instagram" class="mcd-link-resolver mcd-link-url"><svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" class="mcd-svg-instagram"><g fill="none" fill-rule="evenodd"><path stroke="#ADADAD" d="M32.69 16.845c0 8.75-7.094 15.844-15.845 15.844C8.095 32.69 1 25.596 1 16.845S8.094 1 16.845 1c8.75 0 15.845 7.094 15.845 15.845" class="mcd-icon-stroke"></path> <path fill="#6F6F6F" d="M20.017 24.748H13.73A4.735 4.735 0 0 1 9 20.018V13.73A4.735 4.735 0 0 1 13.73 9h6.287a4.736 4.736 0 0 1 4.73 4.73v6.287a4.736 4.736 0 0 1-4.73 4.73z" class="mcd-icon-fill"></path> <path fill="#FFF" d="M16.938 19.358a2.487 2.487 0 0 1-2.484-2.484 2.487 2.487 0 0 1 2.484-2.484 2.487 2.487 0 0 1 2.485 2.484 2.487 2.487 0 0 1-2.485 2.484zm0-6.362a3.882 3.882 0 0 0-3.878 3.878 3.882 3.882 0 0 0 3.878 3.878 3.883 3.883 0 0 0 3.879-3.878 3.883 3.883 0 0 0-3.879-3.878zM21.043 11.812a.923.923 0 1 0 0 1.846.923.923 0 0 0 0-1.846" class="mcd-icon-bg"></path></g></svg></a>
+        </li>
+        <li>
+            <a href="https://twitter.com/MarvelLATAM" target="_blank" title="Twitter" class="mcd-link-resolver mcd-link-url"><svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" class="mcd-svg-twitter"><g fill="none" fill-rule="evenodd"><path stroke="#ADADAD" d="M32.69 16.845c0 8.75-7.094 15.844-15.845 15.844C8.095 32.69 1 25.596 1 16.845S8.094 1 16.845 1c8.75 0 15.845 7.094 15.845 15.845" class="mcd-icon-stroke"></path> <path fill="#6F6F6F" d="M24.94 11.558c-.508.227-1.068.365-1.616.456.26-.044.644-.508.798-.697.234-.287.428-.613.538-.966.014-.028.024-.063-.004-.083-.035-.014-.057-.007-.085.007a8.331 8.331 0 0 1-1.92.724.13.13 0 0 1-.132-.034c-.056-.063-.109-.121-.168-.17a3.409 3.409 0 0 0-.93-.562 3.27 3.27 0 0 0-1.427-.226 3.471 3.471 0 0 0-2.445 1.257 3.285 3.285 0 0 0-.651 1.287c-.113.454-.104.902-.035 1.36.01.076.004.087-.066.076-2.637-.387-4.823-1.318-6.597-3.312-.077-.087-.119-.087-.182.007-.777 1.147-.4 2.992.57 3.899.13.12.262.241.406.351-.053.01-.698-.058-1.274-.351-.076-.049-.115-.02-.122.065-.007.124.004.238.02.373.15 1.164.967 2.24 2.086 2.66.133.055.28.104.423.128-.255.055-.518.094-1.249.038-.09-.017-.126.027-.09.114.549 1.477 1.734 1.916 2.622 2.167.12.02.239.02.358.048-.007.01-.015.01-.021.02-.295.443-1.316.773-1.792.937a6.5 6.5 0 0 1-2.721.343c-.146-.02-.177-.019-.217 0-.04.025-.005.06.042.097.186.12.375.228.567.331.58.304 1.186.546 1.819.718 3.268.89 6.95.236 9.404-2.17 1.928-1.888 2.603-4.493 2.603-7.101 0-.102.123-.158.195-.212.501-.372.9-.817 1.274-1.314.084-.111.079-.21.079-.251v-.014c0-.042.005-.029-.06 0" class="mcd-icon-fill"></path></g></svg></a>
+        </li>
+    </ul>
+</footer> 
 
 </body>
 </html>
