--- a/index1.html
+++ b/index1.html
@@ -11,14 +11,14 @@
 <body>
      <!-- Cabecera -->
     <header class="encabezado">
-        <a  href="/index.html"> <img class="logo" src="/imagenes/Logo.jpeg" alt="Marvel logo"></a>
+        <a  href="/index.html"> <img class="logo" src="Logo.jpeg" alt="Marvel logo"></a>
 
                 <!-- Nav -->
 
         <nav>
             <ul class="list-nav">
-                <li> <a class="item-nav" href="/index1.html"> Fase 1</a> </li> 
-                <li> <a class="item-nav" href="/index2.html"> Fase 2</a> </li>
+                <li> <a class="item-nav" href="index1.html"> Fase 1</a> </li> 
+                <li> <a class="item-nav" href="index2.html"> Fase 2</a> </li>
                 <li> <a class="item-nav" href=""> Fase 3</a> </li>
                 <li> <a class="item-nav" href="">Fase 4</a> </li>
                 <li> <a class="item-nav" href="">Series</a> </li>
