--- a/index1.html
+++ b/index1.html
@@ -11,7 +11,7 @@
 <body>
      <!-- Cabecera -->
     <header class="encabezado">
-        <a  href="/index.html"> <img class="logo" src="Logo.jpeg" alt="Marvel logo"></a>
+        <a  href="index.html"> <img class="logo" src="Logo.jpeg" alt="Marvel logo"></a>
 
                 <!-- Nav -->
 
