--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
 <body>
         <!-- Cabecera -->
 <header class="encabezado">
-    <a  href="/index.html"> <img class="logo" src="Logo.jpeg" alt="Marvel logo"></a>
+    <a  href="index.html"> <img class="logo" src="Logo.jpeg" alt="Marvel logo"></a>
     
             <!-- Nav -->
     <nav>
