--- a/index1.html
+++ b/index1.html
@@ -14,12 +14,12 @@
 <body class="general-f1">
          <!-- Cabecera -->
     <header class="encabezado">
-        <a  href="/index.html"> <img class="logo" src="/imagenes/Logo.jpeg" alt="Marvel logo"></a>
+        <a  href="index.html"> <img class="logo" src="Logo.jpeg" alt="Marvel logo"></a>
 <!-- Nav -->
         <nav>
             <ul class="list-nav">
-                <li> <a class="item-nav" href="/index1.html"> Fase 1</a> </li> 
-                <li> <a class="item-nav" href="/index2.html"> Fase 2</a> </li>
+                <li> <a class="item-nav" href="index1.html"> Fase 1</a> </li> 
+                <li> <a class="item-nav" href="index2.html"> Fase 2</a> </li>
                 <li> <a class="item-nav" href=""> Fase 3</a> </li>
                 <li> <a class="item-nav" href="">Fase 4</a> </li>
                 <li> <a class="item-nav" href="">Series</a> </li>
@@ -39,9 +39,9 @@
            
             <p>Iron Man (2008)</p> 
              <div class="ironman1"> 
-            <img class="img-ironman1" src="/Imagenes/iron-man.jpeg" alt="Iron-man">      
+            <img class="img-ironman1" src="iron-man.jpeg" alt="Iron-man">      
             <p>Cuenta la historia de Anthony Stark, un multimillonario industrial y genio inventor, que es secuestrado y obligado a construir un arma devastadora. En su lugar, utilizando su inteligencia e ingenio, Anthony construye una armadura de alta tecnología y escapa de su cautiverio. Cuando descubre un malvado complot con implicaciones globales, se pone su poderosa armadura y jura para proteger al mundo como Iron Man. </p>
-            <img class="img-reseña-ironman1" src="/Imagenes/iron-man-reseña.jpeg" alt="Iron-man-Reseña">
+            <img class="img-reseña-ironman1" src="iron-man-reseña.jpeg" alt="Iron-man-Reseña">
             <small class="reseña-exp"> (Para entender esta referencia haga <a  class="item-nav"href=""> click aquí)</a></small>
         </div>
 
