--- a/index1.html
+++ b/index1.html
@@ -14,12 +14,12 @@
 <body class="general-f1">
          <!-- Cabecera -->
     <header class="encabezado">
-        <a  href="index.html"> <img class="logo" src="Logo.jpeg" alt="Marvel logo"></a>
+        <a  href="/index.html"> <img class="logo" src="/imagenes/Logo.jpeg" alt="Marvel logo"></a>
 <!-- Nav -->
         <nav>
             <ul class="list-nav">
-                <li> <a class="item-nav" href="index1.html"> Fase 1</a> </li> 
-                <li> <a class="item-nav" href="index2.html"> Fase 2</a> </li>
+                <li> <a class="item-nav" href="/index1.html"> Fase 1</a> </li> 
+                <li> <a class="item-nav" href="/index2.html"> Fase 2</a> </li>
                 <li> <a class="item-nav" href=""> Fase 3</a> </li>
                 <li> <a class="item-nav" href="">Fase 4</a> </li>
                 <li> <a class="item-nav" href="">Series</a> </li>
@@ -35,16 +35,63 @@
         <div class="background">
             <p> En esta fase se presenta el universo en el que suceden las películas, introduciendo a los personajes centrales: <b> Anthony Stark, Steven Rogers, Thor, Bruce Banner, Natalia Romanoff, Clinton Barton y Nicholas Fury</b>, además de las organizaciones como <b> S.H.I.E.L.D. y HYDRA</b>. Muchas de las películas de la Fase Uno se centran en el Teseracto, un artefacto alienígena que más tarde se estableció como uno de las seis Gemas del Infinito. La última película, The Avengers, consiste en la alianza de los villanos Loki y Thanos para robar el Teseracto y conquistar la Tierra, lo que lleva a la formación de los Vengadores.</p>
             <!-- Sección 2 -->
-            <h3>Peliculas:</h3>
+            <h2>Peliculas:</h2>
            
-            <p>Iron Man (2008)</p> 
-             <div class="ironman1"> 
-            <img class="img-ironman1" src="iron-man.jpeg" alt="Iron-man">      
-            <p>Cuenta la historia de Anthony Stark, un multimillonario industrial y genio inventor, que es secuestrado y obligado a construir un arma devastadora. En su lugar, utilizando su inteligencia e ingenio, Anthony construye una armadura de alta tecnología y escapa de su cautiverio. Cuando descubre un malvado complot con implicaciones globales, se pone su poderosa armadura y jura para proteger al mundo como Iron Man. </p>
-            <img class="img-reseña-ironman1" src="iron-man-reseña.jpeg" alt="Iron-man-Reseña">
-            <small class="reseña-exp"> (Para entender esta referencia haga <a  class="item-nav"href=""> click aquí)</a></small>
-        </div>
+            <h5>Iron Man (2008)</h5>
+            <section class="ironman-1">
+                <img class="img-ironman1" src="/Imagenes/iron-man.jpeg" alt="Iron-man">
+                <div class="ironman1-reseña">
+                    <img class="img-reseña-ironman1" src="/Imagenes/iron-man-reseña.jpeg" alt="Iron-man-Reseña">
+                    <small> (Para entender esta referencia haga <a  class="item-nav"href=""> click aquí)</a></small>
+                    <p class="reseña-ironman1">Cuenta la historia de <b>Anthony Stark</b>, un multimillonario industrial y genio inventor, que es secuestrado y obligado a construir un arma devastadora. En su lugar, utilizando su inteligencia e ingenio, <b>Anthony</b> construye una armadura de alta tecnología y escapa de su cautiverio. Cuando descubre un malvado complot con implicaciones globales, se pone su poderosa armadura y jura para proteger al mundo como <b>Iron Man</b>. </p>
+                </div>
+            </section>
+             <h5 class="titulo-hulk">The incredible Hulk (2008)</h5>
+             <section class="hulk">
+                 <img class="img-hulk" src="/Imagenes/hulk.jpeg" alt="Increible-Hulk">
+                 <div class="hulk-reseña">
+                     <img class="img-reseña-hulk" src="/Imagenes/hulk-reseña.jpeg" alt="hulk-reseña">
+                    <small>(Para entender esta referencia haga <a class="item-nav" href="">click aquí)</a></small>
+                    <p class="reseña-hulk"> <b>Bruce Banner</b> recorre el mundo en busca de un antídoto para librarse de su alter ego llamado <b>Hulk</b>. Además tendrá que hacer frente a Emil, un nuevo enemigo, lo que convertirá a Nueva York en el escenario de la última batalla entre las dos criaturas más poderosas.</p>
+                 </div>
+             </section>
+             <h5 class="titulo-ironman-2">Iron-man 2 (2010)</h5>
+             <section class="ironman-2">
+                <img class="img-ironman2" src="/Imagenes/iron-man2.jpeg" alt="Ironman-2">
+                <div class="ironman2-reseña">
+                    <img src="/Imagenes/iron-man2-reseña.jpeg" alt="Iron-man2-reseña">
+                    <small>(Para entender esta referencia haga <a class="item-nav" href=""> click aquí)</a></small>
+                    <p class="reseña-ironman2">Ahora que el mundo es consciente de que él es <b>Iron Man</b>, el inventor multimillonario <b>Anthony Stark</b> enfrenta la presión en todos lados para compartir su tecnología con los militares. Él se resiste a divulgar los secretos de su traje blindado, temiendo que la información caiga en las manos equivocadas</p>
+                </div>
+             </section>
+            <h5 class="titulo-thor">Thor (2011)</h5>
+            <section class="thor">
+                <img class="img-thor" src="/Imagenes/thor.jpeg" alt="Thor">
+                <div class="thor-reseña">
+                    <img src="/Imagenes/thor-reseña.jpeg" alt="Thor-reseña">
+                    <small>(Para entender esta referencia haga <a class="item-nav" href=""> click aquí)</a></small>
+                    <p class="reseña-thor">El poderoso <b>Thor</b>, un poderoso pero arrogante guerrero cuyas acciones imprudentes reinician una guerra antigua. <b>Thor</b> es expulsado a la Tierra por su <b>padre Odín</b> y se ve obligado a vivir entre los humanos. Una hermosa y joven científica, <b>Jane Foster</b>, tiene un profundo afecto hacia <b>Thor</b>, quien finalmente se convierte en su primer amor. Mientras está en la Tierra, <b>Thor</b> aprende lo que se necesita para ser un verdadero héroe cuando el villano más peligroso de su mundo envía a las fuerzas más oscuras de <b><Asgard></b> a invadir la Tierra.</p>
+                </div>
+            </section>
+            <h5 class="titulo-capitanamerica">Captain America: The First Avenger</h5>
+            <section class="capitanamerica">
+                <img class="img-capitan" src="/Imagenes/captain-america.jpeg" alt="Capitan-America">
+                <div class="capitanamerica-reseña">
+                    <img src="/Imagenes/captain-america-reseña.jpeg" alt="reseña-Capitan-America">
+                    <small>(Para entender esta referencia haga <a class="item-nav" href="">click aquí)</a></small>
+                    <p class="reseña-capitanamerica"> En el año 1941; el mundo estaba desgarrado por la guerra. Tras varios intentos frustrados de ingresar como militar para luchar junto a sus hermanos y hermanos en las Fuerzas Aliadas, el beligerante <b>Steve Rogers</b>, un joven de 45 kilos de peso, participa en un programa experimental que lo convertirá en el súper soldado conocido como el <b>Capitán América</b>. En su nueva y musculosa encarnación, el <b>Capitán América</b> une fuerzas con su amigo <b>Bucky Barnes</b> y la confiada <b>Peggy Carter</b>, bajo las órdenes del <b>Coronel Chester Phillips</b>, para luchar contra la malvada organización <b>HYDRA</b>, la división científica de los Nazis encabezada por el villano <b>Calavera Roja</b>.</p>
+                </div>
+            </section>
 
+            <h5 class="titulo-avengers">The Avengers (2012)</h5>
+            <section class="avengers">
+                <img class="img-avengers" src="/Imagenes/avengers.jpeg" alt="Avengers">
+                <div class="avengers-reseña">
+                    <img src="/Imagenes/avengers-reseña.jpeg" alt="Avengers-reseña">
+                    <small>(Para entender esta referencia haga <a class="item-nav" href="">click acá)</a></small>
+                    <p class="reseña-avengers">El equipo de superhéroes más espectacular de todos los tiempos con iconos como <b>Anthony Stark/Iron Man</b>, <b>El Increíble Hulk</b>, <b>Thor</b>, <b>Steven Rogers/Capitán América</b>, <b>Clinton Barton/Hawkeye</b> y <b>Natalia Romanoff/Black Widow</b>. Cuando un enemigo inesperado amenaza con poner en peligro la seguridad mundial, <b>Nicholas Fury</b>, Director de la agencia internacional para el mantenimiento de la paz, conocida con el nombre de <b>S.H.I.E.L.D.</b>, necesita encontrar urgentemente un equipo que salve al mundo del mayor de los desastres. Así empieza una búsqueda por todo el mundo para reclutar personal.</p>
+                </div>
+            </section>
         </div>
     </main>
 
