--- a/index2.html
+++ b/index2.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fase 2</title>
+    <title> Fase 2 </title>
     <link rel="stylesheet" href="style.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,500&family=Poppins:ital,wght@0,100;1,200;1,300&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,500&family=Poppins:ital,wght@0,100;1,200;1,300&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-<body>
+<body class="general-f2">
         <!-- Cabecera -->
 <header class="encabezado">
-    <a  href="index.html"> <img class="logo" src="Logo.jpeg" alt="Marvel logo"></a>
+    <a  href="/index.html"> <img class="logo" src="/imagenes/Logo.jpeg" alt="Marvel logo"></a>
     
             <!-- Nav -->
     <nav>
         <ul class="list-nav">
             <li> <a class="item-nav" href="index1.html"> Fase 1</a> </li> 
             <li> <a class="item-nav" href="index2.html"> Fase 2</a> </li>
-            <li> <a class="item-nav" href=""> Fase 3</a> </li>
+            <li> <a class="item-nav" href="index3.html"> Fase 3</a> </li>
             <li> <a class="item-nav" href="">Fase 4</a> </li>
             <li> <a class="item-nav" href="">Series</a> </li>
             <li> <a class="item-nav" href="">Próximos estrenos</a> </li>
@@ -29,7 +29,85 @@
         </ul>
     </nav>
 </header>
+<main>
 
+            <!-- Sección 1 -->
+<h1 class="titulog2">Fase 2</h1>
+<div class="background">
+    <p>La segunda fase se centra en las hazañas de los <b>Vengadores</b> y <b>S.H.I.E.L.D.</b> después de la Batalla de Nueva York. También se introduce a <b>Samuel Wilson</b>, <b>Pietro Maximoff</b>, <b>Wanda Maximoff</b>, <b>Visión</b>, <b>Scott Lang</b> y <b>los Guardianes de la Galaxia</b>, y además se explica el origen de las Gemas del Infinito. En <b>Captain America: The Winter Soldier</b>, se revela que la organización terrorista <b>HYDRA</b> estuvo operando dentro de <b>S.H.I.E.L.D.</b>, lo que resulta en el colapso de la agencia. Ahora actuando sin la asistencia de <b>S.H.I.E.L.D.</b>, los <b>Vengadores</b> trabajan en solitario con el fin de eliminar a <b>HYDRA</b>, pero involuntariamente crean a un adversario más peligroso en forma de inteligencia artificial, <b>Ultrón</b>. Desde el 2013 hasta el 2015, las películas de la Fase Dos recaudaron <b>$5.271.691.209</b> billones en todo el mundo.</p>
+            <!-- Sección 2 -->    
+    <h2>Peliculas:</h2>
+    <h5>Iron Man 3 (2013)</h5>
+    <section class="ironman-3">
+       <a href="https://youtu.be/E_WdT8N_ATQ" target="_blank"><img class="img-ironman3" src="/Imagenes/iron-man3.jpeg" alt="Iron-man-3"></a>
+        <div class="ironman3-reseña">
+            <img class="img-reseña-ironman3" src="/Imagenes/iron-man3-reseña.jpeg" alt="ironman3-reseña">            
+            <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"> <u>click aquí)</u></a></small>
+            <p class="reseña-ironman-3">Anthony Stark se enfrenta a un enemigo cuyo poder no conoce límites. Cuando Stark comprende que su enemigo ha destruido su universo personal, se embarca en una angustiosa búsqueda para encontrar a los responsables. Este viaje pondrá a prueba su entereza una y otra vez. Acorralado, Stark tendrá que sobrevivir por sus propios medios, confiando en su ingenio y su instinto para proteger a las personas que quiere.</p>
+        </div>
+    </section>
+    <h5 class="titulo-thor-dark">Thor: The Dark World (2013)</h5>
+    <section class="thor-dark">
+        <a href="https://youtu.be/jmVa1kNDnWA" target="_blank"><img class="img-thor-dark" src="/Imagenes/thor-dark.jpeg" alt="Thor-Dark"></a>        
+        <div class="thor-dark-reseña">
+            <img class="img-reseña-thor-dark" src="/Imagenes/thor-dark-reseña.jpeg" alt="Thor-Dark-reseña">
+            <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"> <u>click aquí)</u></a></small>
+            <p class="reseña-thor-dark">A raíz de los sucesos de <b>‘Thor’</b> y <b>‘The Avengers’</b>, <b>Thor</b> lucha por restablecer el orden en todo el cosmos... pero una antigua raza liderada por el vengativo <b>Malekith</b> regresa para volver a sumir al universo en la oscuridad. <b>Thor</b> se enfrenta a un enemigo al que ni siquiera <b>Odín</b> y <b>Asgard</b> pueden hacer frente y deberá embarcarse en su viaje más peligroso y personal. En este viaje se reunirá con <b>Jane Foster</b> y deberá sacrificarlo todo para salvar el mundo.</p>
+        </div>
+    </section>
+    <h5 class="titulo-capitanamerica-winter">Captain America: The Winter Soldier (2014) </h5>
+    <section class="capitanamerica-winter">
+        <a href="https://youtu.be/FmXjNGVpXUc" target="_blank"> <img class="img-capitain-winter" src="/Imagenes/captain-winter.jpeg" alt="Winter Soldier"></a>
+        <div class="capitanamerica-winter-reseña">
+            <img class="img-reseña-capitain-winter" src="/Imagenes/captain-winter-reseña.jpeg" alt="Winter reseña">
+            <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"> <u>click aquí)</u></a></small>
+            <p class="reseña-capitain-winter"> <b>Steven Rogers</b>, alias el <b>Capitán América</b>, vivía tranquilamente en Washington, D.C. e intentando adaptarse al mundo moderno. Pero cuando un colega de <b>S.H.I.E.L.D.</b> se ve amenazado, <b>Steven</b> se encuentra envuelto en una trama de intrigas que puede poner en riesgo el mundo entero. Uniendo fuerzas con <b>Natalia Romanoff</b>, el <b>Capitán América</b> lucha por desenmascarar la conspiración cada vez mayor mientras pelea contra asesinos profesionales enviados para silenciarlo a cada paso. Cuando el plan malvado es revelado, <b>Steven Rogers</b> y <b>Natalia Romanoff</b> piden la ayuda de un nuevo aliado: <b>Samuel Wilson</b>. Sin embargo, pronto se encontrarán a sí mismos luchando contra un enemigo colosal e inesperado: el <b>Soldado del Invierno</b>.</p>
+        </div>
+    </section>
+    <h5 class="titulo-guardians">Guardians of the Galaxy (2014)</h5>
+    <section class="guardians">
+    <a href="https://youtu.be/wP9MqhsHcqA" target="_blank"> <img class="img-guardians" src="/Imagenes/guardians-of-the-galaxy.jpeg" alt="Guardianes de la Galaxia"></a>
+    <div class="guardians-reseña">
+        <img class="img-reseña-guardians" src="/Imagenes/guardians-of-the-galaxy-reseña.jpeg" alt="reseña-guardians">
+        <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"> <u>click aquí)</u></a></small>
+        <p class="reseña-guardians">Expande el Universo Cinematográfico de Marvel hacia el cosmos, donde un aventurero y temerario <b>Peter Quill</b> se encuentra a sí mismo como objeto de una implacable recompensa después de que robase un misterioso orbe buscado por <b>Ronan</b>, un poderoso villano con ambiciones que amenazan todo el universo. Para evitar al siempre persistente <b>Ronan</b>, <b>Quill</b> es forzado a entrar en una incómoda tregua con un <b>cuarteto</b> de dispares inadaptados: <b>Rocket</b>, un mapache pistolero; <b>Groot</b>, un humanoide en forma de árbol; la mortal y enigmática <b>Gamora</b>; y el motivado por la venganza <b>Drax</b>. Pero cuando <b>Peter</b> descubre el verdadero poder del orbe y la amenaza que supone para el cosmos, debe hacer todo lo posible por unir a sus dispares rivales para un último y desesperado intento – con el destino de la galaxia en juego.</p>
+    </div>
+    </section>
+    <h5 class="titulo-avengers-ultron">Avengers: Age of Ultron (2015)</h5>
+    <section class="avengers-ultron">
+        <a href="https://youtu.be/mSmjhq76DP8" target="_blank"> <img class="img-avengers-ultron" src="/Imagenes/avengers-ultron.jpeg" alt="Avengers Age of Ultron"></a>
+        <div class="avengers-ultron-reseña">
+            <img class="img-reseña-avengers-ultron" src="/Imagenes/avengers-ultron-reseña.jpeg" alt="Reseña-ultron">
+            <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"> <u>click aquí)</u></a></small>
+            <p class="reseña-avengers-ultron">Cuando <b>Anthony Stark</b> trata de reiniciar un programa dormido para mantener la paz, las cosas se salen de control y los héroes más poderosos del planeta, incluyendo a <b>Anthony Stark/Iron Man</b>, <b>Steven Rogers/Capitán América</b>, <b>Thor</b>, <b>Bruce Banner/Hulk</b>, <b>Natalia Romanoff/Black Widow</b> y <b>Clinton Barton/Hawkeye</b>, enfrentan la prueba definitiva y el destino del planeta está en la balanza. Mientras el villano <b>Ultrón</b> emerge, son los Vengadores quienes deben impedirle finalizar su terrible plan mientras forman difíciles alianzas y acciones inesperadas.</p>
+        </div>
+    </section>
+    <h5 class="titulo-antman">Ant-Man (2015)</h5>
+    <section class="ant-man">
+        <a href="https://youtu.be/mBv4FSyg-P4" target="_blank"> <img class="img-antman" src="/Imagenes/ant-man.jpeg" alt="ant-man"></a>
+        <div class="antman-reseña">
+            <img class="img-reseña-antman" src="/Imagenes/ant-man-reseña.jpeg" alt="reseña-ant man">
+            <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"> <u>click aquí)</u></a></small>
+            <p class="reseña-antman">Armado con la sorprendente habilidad de encogerse a escala pero incrementando la fuerza, el maestro ladrón <b>Scott Lang</b> debe abrazar a su héroe interior y ayudar a su mentor, el <b>Dr. Henry Pym</b>, a proteger el secreto que hay detrás del espectacular traje de <b>Ant-Man</b> de una nueva generación de amenazas crecientes. Contra lo que parecen obstáculos insalvables, <b>Pym</b> y <b>Lang</b> deben planear y ejecutar un atraco que salvará el mundo.</p>
+        </div>
+    </section>
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+</main>
             <!-- Pie de pagina -->
 <footer>  
     <small>
@@ -37,13 +115,13 @@
         <a class="tirando-tomates" href="https://www.rottentomatoes.com/" target="_blank"> Rootentomatoes.com </a> </small>
         <ul class="footerlist">
             <li>
-                <a href="https://www.instagram.com/marvellatam/" target="_blank" title="Instagram" class="mcd-link-resolver mcd-link-url"><svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" class="mcd-svg-instagram"><g fill="none" fill-rule="evenodd"><path stroke="#ADADAD" d="M32.69 16.845c0 8.75-7.094 15.844-15.845 15.844C8.095 32.69 1 25.596 1 16.845S8.094 1 16.845 1c8.75 0 15.845 7.094 15.845 15.845" class="mcd-icon-stroke"></path> <path fill="#6F6F6F" d="M20.017 24.748H13.73A4.735 4.735 0 0 1 9 20.018V13.73A4.735 4.735 0 0 1 13.73 9h6.287a4.736 4.736 0 0 1 4.73 4.73v6.287a4.736 4.736 0 0 1-4.73 4.73z" class="mcd-icon-fill"></path> <path fill="#FFF" d="M16.938 19.358a2.487 2.487 0 0 1-2.484-2.484 2.487 2.487 0 0 1 2.484-2.484 2.487 2.487 0 0 1 2.485 2.484 2.487 2.487 0 0 1-2.485 2.484zm0-6.362a3.882 3.882 0 0 0-3.878 3.878 3.882 3.882 0 0 0 3.878 3.878 3.883 3.883 0 0 0 3.879-3.878 3.883 3.883 0 0 0-3.879-3.878zM21.043 11.812a.923.923 0 1 0 0 1.846.923.923 0 0 0 0-1.846" class="mcd-icon-bg"></path></g></svg></a>
+                <a href="https://www.instagram.com/marvellatam/" target="_blank" title="Instagram"><svg width="34" height="34" viewBox="0 0 34 34"><g fill="none" fill-rule="evenodd"><path stroke="#ADADAD" d="M32.69 16.845c0 8.75-7.094 15.844-15.845 15.844C8.095 32.69 1 25.596 1 16.845S8.094 1 16.845 1c8.75 0 15.845 7.094 15.845 15.845"></path> <path fill="#6F6F6F" d="M20.017 24.748H13.73A4.735 4.735 0 0 1 9 20.018V13.73A4.735 4.735 0 0 1 13.73 9h6.287a4.736 4.736 0 0 1 4.73 4.73v6.287a4.736 4.736 0 0 1-4.73 4.73z"></path> <path fill="#FFF" d="M16.938 19.358a2.487 2.487 0 0 1-2.484-2.484 2.487 2.487 0 0 1 2.484-2.484 2.487 2.487 0 0 1 2.485 2.484 2.487 2.487 0 0 1-2.485 2.484zm0-6.362a3.882 3.882 0 0 0-3.878 3.878 3.882 3.882 0 0 0 3.878 3.878 3.883 3.883 0 0 0 3.879-3.878 3.883 3.883 0 0 0-3.879-3.878zM21.043 11.812a.923.923 0 1 0 0 1.846.923.923 0 0 0 0-1.846"></path></g></svg></a>
             </li>
             <li>
-                <a href="https://twitter.com/MarvelLATAM" target="_blank" title="Twitter" class="mcd-link-resolver mcd-link-url"><svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" class="mcd-svg-twitter"><g fill="none" fill-rule="evenodd"><path stroke="#ADADAD" d="M32.69 16.845c0 8.75-7.094 15.844-15.845 15.844C8.095 32.69 1 25.596 1 16.845S8.094 1 16.845 1c8.75 0 15.845 7.094 15.845 15.845" class="mcd-icon-stroke"></path> <path fill="#6F6F6F" d="M24.94 11.558c-.508.227-1.068.365-1.616.456.26-.044.644-.508.798-.697.234-.287.428-.613.538-.966.014-.028.024-.063-.004-.083-.035-.014-.057-.007-.085.007a8.331 8.331 0 0 1-1.92.724.13.13 0 0 1-.132-.034c-.056-.063-.109-.121-.168-.17a3.409 3.409 0 0 0-.93-.562 3.27 3.27 0 0 0-1.427-.226 3.471 3.471 0 0 0-2.445 1.257 3.285 3.285 0 0 0-.651 1.287c-.113.454-.104.902-.035 1.36.01.076.004.087-.066.076-2.637-.387-4.823-1.318-6.597-3.312-.077-.087-.119-.087-.182.007-.777 1.147-.4 2.992.57 3.899.13.12.262.241.406.351-.053.01-.698-.058-1.274-.351-.076-.049-.115-.02-.122.065-.007.124.004.238.02.373.15 1.164.967 2.24 2.086 2.66.133.055.28.104.423.128-.255.055-.518.094-1.249.038-.09-.017-.126.027-.09.114.549 1.477 1.734 1.916 2.622 2.167.12.02.239.02.358.048-.007.01-.015.01-.021.02-.295.443-1.316.773-1.792.937a6.5 6.5 0 0 1-2.721.343c-.146-.02-.177-.019-.217 0-.04.025-.005.06.042.097.186.12.375.228.567.331.58.304 1.186.546 1.819.718 3.268.89 6.95.236 9.404-2.17 1.928-1.888 2.603-4.493 2.603-7.101 0-.102.123-.158.195-.212.501-.372.9-.817 1.274-1.314.084-.111.079-.21.079-.251v-.014c0-.042.005-.029-.06 0" class="mcd-icon-fill"></path></g></svg></a>
+                <a href="https://twitter.com/MarvelLATAM" target="_blank" title="Twitter"><svg width="34" height="34" viewBox="0 0 34 34" ><g fill="none" fill-rule="evenodd"><path stroke="#ADADAD" d="M32.69 16.845c0 8.75-7.094 15.844-15.845 15.844C8.095 32.69 1 25.596 1 16.845S8.094 1 16.845 1c8.75 0 15.845 7.094 15.845 15.845"></path> <path fill="#6F6F6F" d="M24.94 11.558c-.508.227-1.068.365-1.616.456.26-.044.644-.508.798-.697.234-.287.428-.613.538-.966.014-.028.024-.063-.004-.083-.035-.014-.057-.007-.085.007a8.331 8.331 0 0 1-1.92.724.13.13 0 0 1-.132-.034c-.056-.063-.109-.121-.168-.17a3.409 3.409 0 0 0-.93-.562 3.27 3.27 0 0 0-1.427-.226 3.471 3.471 0 0 0-2.445 1.257 3.285 3.285 0 0 0-.651 1.287c-.113.454-.104.902-.035 1.36.01.076.004.087-.066.076-2.637-.387-4.823-1.318-6.597-3.312-.077-.087-.119-.087-.182.007-.777 1.147-.4 2.992.57 3.899.13.12.262.241.406.351-.053.01-.698-.058-1.274-.351-.076-.049-.115-.02-.122.065-.007.124.004.238.02.373.15 1.164.967 2.24 2.086 2.66.133.055.28.104.423.128-.255.055-.518.094-1.249.038-.09-.017-.126.027-.09.114.549 1.477 1.734 1.916 2.622 2.167.12.02.239.02.358.048-.007.01-.015.01-.021.02-.295.443-1.316.773-1.792.937a6.5 6.5 0 0 1-2.721.343c-.146-.02-.177-.019-.217 0-.04.025-.005.06.042.097.186.12.375.228.567.331.58.304 1.186.546 1.819.718 3.268.89 6.95.236 9.404-2.17 1.928-1.888 2.603-4.493 2.603-7.101 0-.102.123-.158.195-.212.501-.372.9-.817 1.274-1.314.084-.111.079-.21.079-.251v-.014c0-.042.005-.029-.06 0"></path></g></svg></a>
             </li>
         </ul>
 </footer>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>   
 </body>
 </html>
