--- a/index3.html
+++ b/index3.html
@@ -14,7 +14,7 @@
 <body class="general-f3">
     <!-- Cabecera -->
     <header class="encabezado">
-        <a  href="/index.html"> <img class="logo" src="/imagenes/Logo.jpeg" alt="Marvel logo"></a>
+        <a  href="index.html"> <img class="logo" src="Logo.jpeg" alt="Marvel logo"></a>
         <!-- Nav -->
         <nav>
             <ul class="list-nav">
@@ -37,9 +37,9 @@
             <h2>Peliculas:</h2>
             <h5>Captain America: Civil War (2016)</h5>
             <section class="capitain-civilwar">
-                <img  src="/Imagenes/civil-war.jpeg" alt="Civil war">
+                <img  src="civil-war.jpeg" alt="Civil war">
                 <div class="capitain-civilwar-reseña">
-                    <img class="img-reseña-civilwar" src="/Imagenes/civil-war-reseña.jpeg" alt="reseña-civilwar">
+                    <img class="img-reseña-civilwar" src="civil-war-reseña.jpeg" alt="reseña-civilwar">
                     <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"><u>click aquí)</u></a></small>
                     <p class="reseña-civilwar"> En esta entrega se puede ver a <b>Steven Rogers</b> liderando un recién formado equipo de Vengadores en su esfuerzo continuo de proteger la humanidad. Pero después de otro incidente en el que los <b>Vengadores</b> se ven implicados resulte en daños colaterales, la presión política exige que se instale un sistema de rendición de cuentas, dirigido por un cuerpo de gobierno que supervisará y dirigirá el equipo. El nuevo status quo <b>fractura</b> a los Vengadores, resultando en <B>dos</B> frentes — uno <b>liderado por Steven Rogers</b> y su deseo de que los Vengadores permanezcan libres, y <b>otro</b> que seguirá la sorprendente decisión de <b>Anthony Stark</b> de apoyar la supervisión y rendición de cuentas del gobierno.</p>
                     <a class="btn btn-primary" href="https://youtu.be/KuSFt_2jesA" target="_blank" role="button">Trailer</a>
@@ -47,9 +47,9 @@
             </section>
             <h5 class="titulo-strange">Doctor Strange (2016)</h5>
             <section class="doctor-strange">
-                <img class="img-strange" src="/Imagenes/doctor-strange.jpeg" alt="Doctor Strange">
+                <img class="img-strange" src="doctor-strange.jpeg" alt="Doctor Strange">
                 <div class="doctor-strange-reseña">
-                    <img  src="/Imagenes/doctor-strange-reseña.jpeg" alt="Doctor Strange reseña">
+                    <img  src="doctor-strange-reseña.jpeg" alt="Doctor Strange reseña">
                     <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"><u>click aquí)</u></a></small>
                     <p class="reseña-doctorstrange"> Sigue la historia del talentoso neurocirujano <b>Doctor Stephen Strange</b> quien, tras un trágico accidente automovilístico, debe poner a un lado su ego y aprender los secretos del mundo del misticismo y las dimensiones paralelas. Asentado en <b>Greenwich Village</b> en Nueva York, el Doctor Strange debe actuar como intermediario entre el mundo real y lo que aguarda más allá, utilizando un amplio rango de habilidades metafísicas y artefactos para proteger el Universo Cinematográfico de Marvel.</p>
                     <a class="btn btn-primary" href="https://youtu.be/dOhfaLMbvxA" target="_blank" role="button">Trailer</a>
@@ -57,9 +57,9 @@
             </section>
             <h5 class="titulo-guardians2">Guardians of the Galaxy Vol. 2 (2017)</h5>
             <section class="guardians2">
-                <img class="img-guardians2" src="/Imagenes/guardians-of-the-galaxy2.jpeg" alt="Guardians of the galaxy 2">
+                <img class="img-guardians2" src="guardians-of-the-galaxy2.jpeg" alt="Guardians of the galaxy 2">
                 <div class="guardians2-reseña">
-                    <img src="/Imagenes/guardians-of-the-galaxy2-reseña.jpeg" alt="Reseña guardians 2">
+                    <img src="guardians-of-the-galaxy2-reseña.jpeg" alt="Reseña guardians 2">
                     <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"><u>click aquí)</u></a></small>
                     <p class="reseña-guardians2">Continúa las aventuras del equipo mientras atraviesan los confines del cosmos. Los <b>Guardianes</b> deberán luchar para mantener unida su recién encontrada familia mientras desentrañan los secretos de la verdadera ascendencia de <b>Peter Quill</b>. Viejos enemigos se convierten en nuevos aliados y personajes favoritos de los fans en los cómics vendrán a la ayuda de nuestros héroes mientras el Universo Cinematográfico de Marvel continúa con su expansión.</p>
                     <a class="btn btn-primary" href="https://youtu.be/fCPEpGpem3I" target="_blank" role="button">Trailer</a>
@@ -67,9 +67,9 @@
             </section>
             <h5 class="titulo-spiderman-homecoming">Spider-Man: Homecoming (2017)</h5>
             <section class="spiderman-homecoming">
-                <img class="img-homecoming" src="/Imagenes/spider-man-homecoming.jpeg" alt="Homecoming">
+                <img class="img-homecoming" src="spider-man-homecoming.jpeg" alt="Homecoming">
                 <div class="homecoming-reseña">
-                    <img src="/Imagenes/spider-man-homecoming-reseña.jpeg" alt="Reseña Homecoming">
+                    <img src="spider-man-homecoming-reseña.jpeg" alt="Reseña Homecoming">
                     <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"><u>click aquí)</u></a></small>
                     <p class="reseña-homecoming">Un joven <b>Peter Parker</b>, que hizo su sensacional debut en <b>‘Captain America: Civil War’</b>, empieza a explorar en su recién descubierta identidad como el superhéroe lanza-telarañas. Emocionado por su experiencia con los <b>Vengadores</b>, <b>Peter</b> regresa a casa, donde vive con su tía <b>Maybelle</b>, bajo la mirada vigilante de su nuevo mentor <b>Anthony Stark</b>. <b>Peter</b> intenta regresar a su rutina diaria normal – distraído por los pensamientos de demostrarse a sí mismo que es más que el amistoso vecino el <b>Hombre Araña</b> – pero cuando el <b>Buitre</b> emerge como nuevo <b>villano</b>, todo lo que <b>Peter</b> considera lo más importante estará amenazado.</p>
                     <a class="btn btn-primary" href="https://youtu.be/sfPWvYKKAJ4" target="_blank" role="button">Trailer</a>
@@ -77,9 +77,9 @@
             </section>
             <h5 class="titulo-ragnarok">Thor: Ragnarok (2017)</h5>
             <section class="thor-ragnarok">
-                <img class="img-ragnarok" src="/Imagenes/thor-ragnarok.jpeg" alt="Thor Ragnarok">
+                <img class="img-ragnarok" src="thor-ragnarok.jpeg" alt="Thor Ragnarok">
                 <div class="ragnarok-reseña">
-                    <img src="/Imagenes/thor-ragnarok-reseña.jpeg" alt="reseña thor ragnarok">
+                    <img src="thor-ragnarok-reseña.jpeg" alt="reseña thor ragnarok">
                     <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"><u>click aquí)</u></a></small>
                     <p class="reseña-ragnarok">El mundo de <b>Thor</b> está a punto de explotar en esta nueva entrega. Su retorcido hermano, <b>Loki</b>, ha tomado el control de <b>Asgard</b>, la poderosa <b>Hela</b> ha resurgido para robar el trono y <b>Thor</b> es aprisionado en el otro lado del universo. Para escapar del cautiverio y salvar su hogar de una destrucción inminente, <b>Thor</b> debe ganar una competición alienígena mortal y derrotar a su viejo aliado y compañero Vengador... <b>¡El Increíble Hulk!</b></p>
                     <a class="btn btn-primary" href="https://youtu.be/s2DZ3Eg0zRY" target="_blank" role="button">Trailer</a>
@@ -87,9 +87,9 @@
             </section>
             <h5 class="titulo-pantera">Black Panther (2018)</h5>
             <section class="pantera">
-                <img src="/Imagenes/black-panter.jpeg" alt="Black Panter">
+                <img src="black-panter.jpeg" alt="Black Panter">
                 <div class="pantera-reseña">
-                    <img src="/Imagenes/black-panter-reseña.jpeg" alt="Reseña Black Panter">
+                    <img src="black-panter-reseña.jpeg" alt="Reseña Black Panter">
                     <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"><u>click aquí)</u></a></small>
                     <p class="reseña-pantera"> El <b>rey T'Challa</b> regresa a su hogar, a la recluida y tecnológicamente avanzada nación africana de <b>Wakanda</b>, para servir como nuevo líder del país. Sin embargo, <b>T’Chall</b>a pronto descubre que es desafiado por el trono por facciones dentro de su propio país. Cuando dos enemigos conspiran para destruir <b>Wakanda</b>, el héroe conocido como <b>Pantera Negra</b> debe formar equipo con el agente de la <b>C.I.A</b>. <b>Everett Ross</b> y miembros de las <b>Dora Milaje</b>, fuerzas especiales de <b>Wakanda</b>, para evitar que su hogar sea arrastrada hacia una guerra mundial.</p>
                     <a class="btn btn-primary" href="https://youtu.be/JcIye2DaZwI" target="_blank" role="button">Trailer</a>
@@ -97,9 +97,9 @@
             </section>
             <h5 class="titulo-infinity">Avengers: Infinity War (2018)</h5>
             <section class="infinity">
-                <img class="img-infinity" src="/Imagenes/avengers-infinity.jpeg" alt="Infinity War">
+                <img class="img-infinity" src="avengers-infinity.jpeg" alt="Infinity War">
                 <div class="infinity-reseña">
-                    <img src="/Imagenes/avengers-infinity-reseña.jpeg" alt="Reseña Infinity">
+                    <img src="avengers-infinity-reseña.jpeg" alt="Reseña Infinity">
                     <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"><u>click aquí)</u></a></small>
                     <p class="reseña-infinity">A medida que los <b>Vengadores</b> y sus aliados han seguido protegiendo al mundo de amenazas demasiado grandes para que cualquier otro héroe las pueda manejar, un nuevo peligro surge de las sombras cósmicas: <b>Thanos</b>. Un déspota de la infamia intergaláctica, su objetivo es hacerse con las <b>seis Gemas del Infinito</b>, artefactos de poder inimaginable, y usarlas para infligir su torcida voluntad en toda la realidad. Todo por lo que han luchado los <b>Vengadores</b> ha conducido a este momento, el destino de la Tierra y la existencia misma nunca ha sido más incierto.</p>
                     <a class="btn btn-primary" href="https://youtu.be/_7Nv0cBlgXI" target="_blank" role="button">Trailer</a>
@@ -107,9 +107,9 @@
             </section>
             <h5 class="titulo-antman-wasp">Ant-Man and the Wasp (2018)</h5>
             <section class="antman-wasp">
-                <img class="img-antman-wasp" src="/Imagenes/ant-man-wisp.jpeg" alt="Ant-man Wasp">
+                <img class="img-antman-wasp" src="ant-man-wisp.jpeg" alt="Ant-man Wasp">
                 <div class="antman-wasp-reseña">
-                    <img src="/Imagenes/ant-man-wisp-reseña.jpeg" alt="reseña antman wasp">
+                    <img src="ant-man-wisp-reseña.jpeg" alt="reseña antman wasp">
                     <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"><u>click aquí)</u></a></small>
                     <p class="reseña-antman-wasp">Después de los acontecimientos de <b>‘Captain America: Civil War’</b>, <b>Scott Lang</b> intenta congeniar sus decisiones tanto de superhéroe como de padre. Mientras intenta encontrar un equilibrio entre ambos mundos es encarado por <b>Hope van Dyne</b> y el <b>Doctor Henry Pym</b> debido a una nueva y urgente misión. <b>Scott</b> debe ponerse el traje de nuevo y aprender a pelear junto a <b>Wasp</b> mientras el equipo trabaja unido para desenterrar secretos de su pasado.</p>
                     <a class="btn btn-primary" href="https://youtu.be/1xdCWAagZfw" target="_blank" role="button">Trailer</a>
@@ -117,9 +117,9 @@
             </section>
             <h5 class="titulo-capitana-marvel">Captain Marvel (2019)</h5>
             <section class="capitana-marvel">
-                <img class="img-capitana-marvel" src="/Imagenes/captain-marvel.jpeg" alt="Capitain Marvel">
+                <img class="img-capitana-marvel" src="captain-marvel.jpeg" alt="Capitain Marvel">
                 <div class="capitana-marvel-reseña">
-                    <img src="/Imagenes/captain-marvel-reseña.jpeg" alt="Reseña Capitain Marvel">
+                    <img src="captain-marvel-reseña.jpeg" alt="Reseña Capitain Marvel">
                     <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"><u>click aquí)</u></a></small>
                     <p class="reseña-capitana-marvel">Ambientada en los años 90, esta nueva aventura nos presenta un periodo de la historia nunca antes visto en el Universo Cinematográfico de Marvel. El viaje de <b>Carol Danvers</b> para convertirse en una de las heroínas más poderosas del universo, la <b>Capitana Marvel</b>, miembro de una raza de nobles héroes guerreros. Mientras una guerra galáctica entre dos razas alienígenas llega a la Tierra, <b>Danvers</b> luchará junto a un pequeño grupo de aliados, mientras trata de encontrarse a sí misma para descubrir quién es en realidad.</p>
                     <a class="btn btn-primary" href="https://youtu.be/Q2rjVVEDL2o" target="_blank" role="button">Trailer</a>
@@ -127,9 +127,9 @@
             </section>
             <h5 class="titulo-endgame">Avengers: Endgame (2019)</h5>
             <section class="endgame">
-                <img class="img-endgame" src="/Imagenes/avengers-end-game.jpeg" alt="Avengers End Game">
+                <img class="img-endgame" src="avengers-end-game.jpeg" alt="Avengers End Game">
                 <div class="endgame-reseña">
-                    <img src="/Imagenes/avengers-end-game-reseña.jpeg" alt="reseña end Game">
+                    <img src="avengers-end-game-reseña.jpeg" alt="reseña end Game">
                     <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"><u>click aquí)</u></a></small>
                     <p class="reseña-endgame">Después de los eventos devastadores de <b>‘Avengers: Infinity War’</b>, el universo está en ruinas debido a las acciones de <b>Thanos</b>, el <b>Titán Loco</b>. Con la ayuda de los aliados que quedaron, los <b>Vengadores</b> deben reunirse una vez más para deshacer sus acciones y restaurar el orden en el universo de una vez por todas, sin importar cuáles son las consecuencias que pueda tener.</p>
                     <a class="btn btn-primary" href="https://youtu.be/PyakRSni-c0" target="_blank" role="button">Trailer</a>
@@ -137,9 +137,9 @@
             </section>
             <h5 class="titulo-spiderman-farfrom">Spider-Man: Far From Home (2019)</h5>
             <section class="spiderman-farfrom">
-                <img class="img-spiderman-farfrom" src="/Imagenes/spider-man-far-from-home.jpeg" alt="Spiderman far from home">
+                <img class="img-spiderman-farfrom" src="spider-man-far-from-home.jpeg" alt="Spiderman far from home">
                 <div class="spiderman-farfrom-reseña">
-                    <img src="/Imagenes/spider-man-far-from-home-reseña.jpeg" alt="Reseña Far from home">
+                    <img src="spider-man-far-from-home-reseña.jpeg" alt="Reseña Far from home">
                     <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"><u>click aquí)</u></a></small>
                     <p class="reseña-spiderman-farfrom"> Nuestro amigable vecino superhéroe decide unirse a sus mejores amigos, <b>Edward Leeds</b>, <b>Michelle Jones</b> y el resto de la pandilla en unas vacaciones europeas. Sin embargo, el plan de <b>Peter</b> para dejar atrás las acciones heroicas durante unas semanas se desecha rápidamente cuando acepta a regañadientes ayudar a <b>Nicholas Fury</b> a descubrir el misterio de varios ataques de criaturas elementales que están causando estragos en todo el continente.</p>
                     <a class="btn btn-primary" href="https://youtu.be/A0KAdX2LWoo" target="_blank" role="button">Trailer</a>
