--- a/index1.html
+++ b/index1.html
@@ -14,7 +14,7 @@
 <body class="general-f1">
             <!-- Cabecera -->
     <header class="encabezado">
-        <a  href="/index.html"> <img class="logo" src="/imagenes/Logo.jpeg" alt="Marvel logo"></a>
+        <a  href="index.html"> <img class="logo" src="Logo.jpeg" alt="Marvel logo"></a>
 <!-- Nav -->
         <nav>
             <ul class="list-nav">
