--- a/index1.html
+++ b/index1.html
@@ -14,16 +14,16 @@
 <body class="general-f1">
             <!-- Cabecera -->
     <header class="encabezado">
-        <a  href="index.html"> <img class="logo" src="Logo.jpeg" alt="Marvel logo"></a>
+        <a  href="/index.html"> <img class="logo" src="/imagenes/Logo.jpeg" alt="Marvel logo"></a>
 <!-- Nav -->
         <nav>
             <ul class="list-nav">
                 <li> <a class="item-nav" href="index1.html"> Fase 1</a> </li> 
                 <li> <a class="item-nav" href="index2.html"> Fase 2</a> </li>
                 <li> <a class="item-nav" href="index3.html"> Fase 3</a> </li>
-                <li> <a class="item-nav" href="">Fase 4</a> </li>
+                <li> <a class="item-nav" href="index4.html">Fase 4</a> </li>
                 <li> <a class="item-nav" href="">Series</a> </li>
-                <li> <a class="item-nav" href="">Próximos estrenos</a> </li>
+                <li> <a class="item-nav" href="index-futuro.html">Próximos estrenos</a> </li>
                 <li> <a class="item-nav" href="">Orden cronologico</a> </li>
             </ul>
         </nav>
@@ -39,19 +39,19 @@
            
             <h5>Iron Man (2008)</h5>
             <section class="ironman-1">
-                <img class="img-ironman1" src="iron-man.jpeg" alt="Iron-man">
+                <img class="img-ironman1" src="/Imagenes/iron-man.jpeg" alt="Iron-man">
                 <div class="ironman1-reseña">
-                    <img class="img-reseña-ironman1" src="iron-man-reseña.jpeg" alt="Iron-man-Reseña">
+                    <img class="img-reseña-ironman1" src="/Imagenes/iron-man-reseña.jpeg" alt="Iron-man-Reseña">
                     <small> (Para entender esta referencia haga <a  class="item-nav"href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"> <u>click aquí)</u></a></small>
                     <p class="reseña-ironman1">Cuenta la historia de <b>Anthony Stark</b>, un multimillonario industrial y genio inventor, que es secuestrado y obligado a construir un arma devastadora. En su lugar, utilizando su inteligencia e ingenio, <b>Anthony</b> construye una armadura de alta tecnología y escapa de su cautiverio. Cuando descubre un malvado complot con implicaciones globales, se pone su poderosa armadura y jura para proteger al mundo como <b>Iron Man</b>. </p>
-                    <a class="btn btn-primary" href="https://youtu.be/EVFUfCUZbxk" target="_blank" role="button">Trailer</a>        
+                    <a class="btn btn-primary" href="https://youtu.be/gR3JFH_3LhY" target="_blank" role="button">Trailer</a>        
                 </div>
             </section>
              <h5 class="titulo-hulk">The incredible Hulk (2008)</h5>
              <section class="hulk">
-                 <img class="img-hulk" src="hulk.jpeg" alt="Increible-Hulk">
+                 <img class="img-hulk" src="/Imagenes/hulk.jpeg" alt="Increible-Hulk">
                  <div class="hulk-reseña">
-                     <img class="img-reseña-hulk" src="hulk-reseña.jpeg" alt="hulk-reseña">
+                     <img class="img-reseña-hulk" src="/Imagenes/hulk-reseña.jpeg" alt="hulk-reseña">
                     <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"> <u>click aquí)</u></a></small>
                     <p class="reseña-hulk"> <b>Bruce Banner</b> recorre el mundo en busca de un antídoto para librarse de su alter ego llamado <b>Hulk</b>. Además tendrá que hacer frente a Emil, un nuevo enemigo, lo que convertirá a Nueva York en el escenario de la última batalla entre las dos criaturas más poderosas.</p>
                     <a class="btn btn-primary" href="https://youtu.be/i2ueewdSiJg" target="_blank" role="button">Trailer</a>                
@@ -59,9 +59,9 @@
              </section>
              <h5 class="titulo-ironman-2">Iron-man 2 (2010)</h5>
              <section class="ironman-2">
-                 <img class="img-ironman2" src="iron-man2.jpeg" alt="Ironman-2">
+                 <img class="img-ironman2" src="/Imagenes/iron-man2.jpeg" alt="Ironman-2">
                 <div class="ironman2-reseña">
-                    <img src="iron-man2-reseña.jpeg" alt="Iron-man2-reseña">
+                    <img src="/Imagenes/iron-man2-reseña.jpeg" alt="Iron-man2-reseña">
                     <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"> <u>click aquí)</u></a></small>
                     <p class="reseña-ironman2">Ahora que el mundo es consciente de que él es <b>Iron Man</b>, el inventor multimillonario <b>Anthony Stark</b> enfrenta la presión en todos lados para compartir su tecnología con los militares. Él se resiste a divulgar los secretos de su traje blindado, temiendo que la información caiga en las manos equivocadas</p>
                     <a class="btn btn-primary" href="https://youtu.be/AiWBoQ2DiD0" target="_blank" role="button">Trailer</a>                
@@ -69,9 +69,9 @@
              </section>
             <h5 class="titulo-thor">Thor (2011)</h5>
             <section class="thor">
-                <img class="img-thor" src="thor.jpeg" alt="Thor">                
+                <img class="img-thor" src="/Imagenes/thor.jpeg" alt="Thor">                
                 <div class="thor-reseña">
-                    <img src="thor-reseña.jpeg" alt="Thor-reseña">
+                    <img src="/Imagenes/thor-reseña.jpeg" alt="Thor-reseña">
                     <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"> <u>click aquí)</u></a></small>
                     <p class="reseña-thor">El poderoso <b>Thor</b>, un poderoso pero arrogante guerrero cuyas acciones imprudentes reinician una guerra antigua. <b>Thor</b> es expulsado a la Tierra por su <b>padre Odín</b> y se ve obligado a vivir entre los humanos. Una hermosa y joven científica, <b>Jane Foster</b>, tiene un profundo afecto hacia <b>Thor</b>, quien finalmente se convierte en su primer amor. Mientras está en la Tierra, <b>Thor</b> aprende lo que se necesita para ser un verdadero héroe cuando el villano más peligroso de su mundo envía a las fuerzas más oscuras de <b><Asgard></b> a invadir la Tierra.</p>
                         <a class="btn btn-primary" href="https://youtu.be/n65Lkc-5zjQ" target="_blank" role="button">Trailer</a>                
@@ -79,9 +79,9 @@
             </section>
             <h5 class="titulo-capitanamerica">Captain America: The First Avenger</h5>
             <section class="capitanamerica">
-                <img class="img-capitan" src="captain-america.jpeg" alt="Capitan-America">               
+                <img class="img-capitan" src="/Imagenes/captain-america.jpeg" alt="Capitan-America">               
                 <div class="capitanamerica-reseña">
-                    <img src="captain-america-reseña.jpeg" alt="reseña-Capitan-America">
+                    <img src="/Imagenes/captain-america-reseña.jpeg" alt="reseña-Capitan-America">
                     <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"> <u>click aquí</u>)</a></small>
                     <p class="reseña-capitanamerica"> En el año 1941; el mundo estaba desgarrado por la guerra. Tras varios intentos frustrados de ingresar como militar para luchar junto a sus hermanos y hermanos en las Fuerzas Aliadas, el beligerante <b>Steve Rogers</b>, un joven de 45 kilos de peso, participa en un programa experimental que lo convertirá en el súper soldado conocido como el <b>Capitán América</b>. En su nueva y musculosa encarnación, el <b>Capitán América</b> une fuerzas con su amigo <b>Bucky Barnes</b> y la confiada <b>Peggy Carter</b>, bajo las órdenes del <b>Coronel Chester Phillips</b>, para luchar contra la malvada organización <b>HYDRA</b>, la división científica de los Nazis encabezada por el villano <b>Calavera Roja</b>.</p>
                     <a class="btn btn-primary" href="https://youtu.be/JnL7sjclx8k?t=8" target="_blank" role="button">Trailer</a>                
@@ -90,9 +90,9 @@
 
             <h5 class="titulo-avengers">The Avengers (2012)</h5>
             <section class="avengers">
-                <img class="img-avengers" src="avengers.jpeg" alt="Avengers">                
+                <img class="img-avengers" src="/Imagenes/avengers.jpeg" alt="Avengers">                
                 <div class="avengers-reseña">
-                    <img src="avengers-reseña.jpeg" alt="Avengers-reseña">
+                    <img src="/Imagenes/avengers-reseña.jpeg" alt="Avengers-reseña">
                     <small>(Para entender esta referencia haga <a class="item-nav" href="https://www.rottentomatoes.com/about#whatisthetomatometer" target="_blank"> <u>click acá</u>)</a></small>
                     <p class="reseña-avengers">El equipo de superhéroes más espectacular de todos los tiempos con iconos como <b>Anthony Stark/Iron Man</b>, <b>El Increíble Hulk</b>, <b>Thor</b>, <b>Steven Rogers/Capitán América</b>, <b>Clinton Barton/Hawkeye</b> y <b>Natalia Romanoff/Black Widow</b>. Cuando un enemigo inesperado amenaza con poner en peligro la seguridad mundial, <b>Nicholas Fury</b>, Director de la agencia internacional para el mantenimiento de la paz, conocida con el nombre de <b>S.H.I.E.L.D.</b>, necesita encontrar urgentemente un equipo que salve al mundo del mayor de los desastres. Así empieza una búsqueda por todo el mundo para reclutar personal.</p>
                     <a class="btn btn-primary" href="https://youtu.be/yNXfOOL8824" target="_blank" role="button">Trailer</a>                                
